# vision3D

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.xml  setup.cfg  setup.py  test_img_pub.py
launch/: intensity_filter.launch.py  sim_vision.launch.py  vision3D_bringup.launch.py  vision3D_with_intensity_filter.launch.py
vision3D/: image_to_laser.py  img_pub.py  img_serve.py  intensity_filter.py  lane_segmentation_to_pointcloud.py  obstacle_detection.py  test_img_pub.py
vision3D/finetuned_model/: preprocessor_config.json
vision3D/finetuned_model/checkpoint-264/: rng_state.pth  scheduler.pt  trainer_state.json
vision3D/finetuned_model/checkpoint-297/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
vision3D/finetuned_model/checkpoint-330/: rng_state.pth  scheduler.pt  trainer_state.json
